# cell_motility_and_painting_aligner

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: workflow.md
examples/: demo.py  pipeline_starter.ipynb
js/: BUILD.md  aligner_widget.mjs  dual_view_widget.mjs  package-lock.json  package.json  scrubber_widget.mjs
site/: README.md  build_site.py  clustergram.html  engineering.html  index.html  linked_view_widget.mjs  nf01_displacement.html  nf02_morphology.html  nf03_crowding.html  nf04_bh_correction.html  nf05_collisions.html  overview.html  scrubber_widget.mjs
src/cell_motility_painting_aligner/: __init__.py  pipeline.py  style.css  transforms.py  widget.py
src/motility_painting/: __init__.py  io.py
src/motility_painting/pre/: __init__.py  centroids.py  images.py  lap_tracking.py  linking.py  morphology.py  nullmodel.py  segmentation.py  spatial.py  stitching.py  trajectories.py
src/motility_painting/static/: aligner.js  dual_view.css  scrubber.css
src/motility_painting/viz/: __init__.py  aligner.py  dual_view.py  scrubber.py
tests/: test_pipeline.py  test_transforms.py  test_widget.py
