[build-system]
requires = ["hatchling>=1.26.1", "hatch-jupyter-builder>=0.5.0"]
build-backend = "hatchling.build"

[project]
name = "cell-motility-painting-aligner"
version = "0.1.0"
description = "Jupyter anywidget for aligning one motility image to many Cell Painting images"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "cell-motility-painting-aligner contributors" }]
keywords = ["jupyter", "widget", "anywidget", "deck.gl", "microscopy", "registration"]
classifiers = [
  "Framework :: Jupyter",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "anywidget>=0.9.0",
  "ipywidgets>=8.0.0",
  "traitlets>=5.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["ruff", "pytest>=8.0", "build", "twine"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
build-js = "cd js && npm install && npm run build"
lint = "ruff check src tests {args}"
format = "ruff format src tests {args}"
fmt = "ruff format src tests {args}"
test = "pytest {args:tests}"
all = ["lint", "test"]

[tool.hatch.envs.test]
dependencies = ["pytest>=8.0"]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"

[tool.hatch.build]
artifacts = ["src/cell_motility_painting_aligner/bundled/widget.js"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/cell_motility_painting_aligner/bundled/widget.js"]
skip-if-exists = ["src/cell_motility_painting_aligner/bundled/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
npm = "npm"
build_cmd = "build"

[tool.hatch.build.targets.wheel]
packages = ["src/cell_motility_painting_aligner"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/js", "/tests", "/examples", "/pyproject.toml", "/README.md", "/LICENSE"]
exclude = ["/js/node_modules", "/node_modules"]

[tool.ruff]
exclude = [
  ".git",
  ".venv",
  ".eggs",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "build",
  "dist",
  "js/node_modules",
  "node_modules",
]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cell_motility_painting_aligner"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
